# src/main/java/org/controller/AuthController.java
@@ -1,0 +1,23 @@
+package org.controller;
+
+import org.openapitools.model.LoginRequest;
+import org.service.AuthService;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.RequestBody;
+
+
+@RestController
+@RequestMapping("/auth")
+public class AuthController {
+    @Autowired
+    private AuthService authService;
+
+    @PostMapping("/login")
+    public ResponseEntity<?> postLogin(@RequestBody LoginRequest loginRequest) {
+        return this.authService.postLogin(loginRequest);
+    }
+}
