# src/main/java/org/openapitools/api/AuthApiDelegate.java
@@ -1,58 +1,0 @@
-package org.openapitools.api;
-
-import org.openapitools.model.PostLogin200Response;
-import org.openapitools.model.PostLogin401Response;
-import org.openapitools.model.PostLoginRequest;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
-import org.springframework.lang.Nullable;
-import org.springframework.web.context.request.NativeWebRequest;
-import org.springframework.web.multipart.MultipartFile;
-
-import javax.validation.constraints.*;
-import javax.validation.Valid;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import javax.annotation.Generated;
-
-/**
- * A delegate to be called by the {@link AuthApiController}}.
- * Implement this interface with a {@link org.springframework.stereotype.Service} annotated class.
- */
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-07-27T17:46:50.636306-04:00[America/New_York]", comments = "Generator version: 7.14.0")
-public interface AuthApiDelegate {
-
-    default Optional<NativeWebRequest> getRequest() {
-        return Optional.empty();
-    }
-
-    /**
-     * POST /auth/login : Login to the service
-     *
-     * @param postLoginRequest  (required)
-     * @return Login successful (status code 200)
-     *         or Unauthorized (status code 401)
-     * @see AuthApi#postLogin
-     */
-    default ResponseEntity<PostLogin200Response> postLogin(PostLoginRequest postLoginRequest) {
-        getRequest().ifPresent(request -> {
-            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
-                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    String exampleString = "{ \"token\" : \"token\" }";
-                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
-                    break;
-                }
-                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    String exampleString = "{ \"message\" : \"Unauthorized\" }";
-                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
-                    break;
-                }
-            }
-        });
-        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
-
-    }
-
-}
