# src/main/java/org/openapitools/model/LoginRequest.java
@@ -4,31 +4,41 @@ import java.net.URI;
 import java.util.Objects;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonCreator;
-import com.fasterxml.jackson.annotation.JsonTypeName;
 import org.springframework.lang.Nullable;
 import org.openapitools.jackson.nullable.JsonNullable;
 import java.time.OffsetDateTime;
-import javax.validation.Valid;
-import javax.validation.constraints.*;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
 import io.swagger.v3.oas.annotations.media.Schema;
 
 
 import java.util.*;
-import javax.annotation.Generated;
+import jakarta.annotation.Generated;
 
 /**
- * PostLoginRequest
+ * LoginRequest
  */
 
-@JsonTypeName("postLogin_request")
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-07-27T17:46:50.636306-04:00[America/New_York]", comments = "Generator version: 7.14.0")
-public class PostLoginRequest {
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-07-28T00:11:12.019160-04:00[America/New_York]", comments = "Generator version: 7.14.0")
+public class LoginRequest {
 
-  private @Nullable String username;
+  private String username;
 
-  private @Nullable String password;
+  private String password;
 
-  public PostLoginRequest username(@Nullable String username) {
+  public LoginRequest() {
+    super();
+  }
+
+  /**
+   * Constructor with only required parameters
+   */
+  public LoginRequest(String username, String password) {
+    this.username = username;
+    this.password = password;
+  }
+
+  public LoginRequest username(String username) {
     this.username = username;
     return this;
   }
@@ -37,18 +47,18 @@ public class PostLoginRequest {
    * Get username
    * @return username
    */
-  
-  @Schema(name = "username", example = "admin", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @NotNull 
+  @Schema(name = "username", example = "admin", requiredMode = Schema.RequiredMode.REQUIRED)
   @JsonProperty("username")
-  public @Nullable String getUsername() {
+  public String getUsername() {
     return username;
   }
 
-  public void setUsername(@Nullable String username) {
+  public void setUsername(String username) {
     this.username = username;
   }
 
-  public PostLoginRequest password(@Nullable String password) {
+  public LoginRequest password(String password) {
     this.password = password;
     return this;
   }
@@ -57,14 +67,14 @@ public class PostLoginRequest {
    * Get password
    * @return password
    */
-  
-  @Schema(name = "password", example = "admin", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @NotNull 
+  @Schema(name = "password", example = "admin", requiredMode = Schema.RequiredMode.REQUIRED)
   @JsonProperty("password")
-  public @Nullable String getPassword() {
+  public String getPassword() {
     return password;
   }
 
-  public void setPassword(@Nullable String password) {
+  public void setPassword(String password) {
     this.password = password;
   }
 
@@ -76,9 +86,9 @@ public class PostLoginRequest {
     if (o == null || getClass() != o.getClass()) {
       return false;
     }
-    PostLoginRequest postLoginRequest = (PostLoginRequest) o;
-    return Objects.equals(this.username, postLoginRequest.username) &&
-        Objects.equals(this.password, postLoginRequest.password);
+    LoginRequest loginRequest = (LoginRequest) o;
+    return Objects.equals(this.username, loginRequest.username) &&
+        Objects.equals(this.password, loginRequest.password);
   }
 
   @Override
@@ -89,9 +99,9 @@ public class PostLoginRequest {
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
-    sb.append("class PostLoginRequest {\n");
+    sb.append("class LoginRequest {\n");
     sb.append("    username: ").append(toIndentedString(username)).append("\n");
-    sb.append("    password: ").append(toIndentedString(password)).append("\n");
+    sb.append("    password: ").append("*").append("\n");
     sb.append("}");
     return sb.toString();
   }
